<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.vendas.VendasFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_local_selecionado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/level_0"
            android:padding="16dp"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/on_primary"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_busca"
            style="@style/Widget.Caderneta.TextInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="Buscar cliente"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_search"
            app:layout_constraintTop_toBottomOf="@id/tv_local_selecionado"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_busca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_clientes"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="8dp"
            android:clipToPadding="false"
            app:layout_constraintTop_toBottomOf="@id/til_busca"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/item_cliente" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_novo_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/ic_plus"
            app:tint="@color/on_primary"
            app:backgroundTint="@color/primary_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/surface_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/nav_header"
                layout="@layout/nav_header"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_locais"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>
