...

        <Button
            android:id="@+id/btn_salvar_preco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Salvar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_preco_produto" />

        <Button
            android:id="@+id/btn_remover_produto"
            android:layout_width="wrap_content"
...
